<resources>
    <string name="app_name">Mountains</string>
    <string name="database_name">mountains-db</string>
    <string name="date_format_dmy">MM/dd/yyyy</string>
    <string name="date_format_dd_MMM">dd MMM</string>
    <string name="date_format_full">dd/MM/yyyy hh:mm:ss</string>
    <string name="empty_string"/>
    <string name="snackbar_action_undo">UNDO</string>
    <string name="dialog_action_positive">OK</string>
    <string name="dialog_action_negative">Cancel</string>
    <string name="menu_add">Add</string>
    <string name="menu_edit">Edit</string>
    <string name="menu_save">Save</string>
    <string name="navigation_list">List</string>
    <string name="navigation_today">Today</string>
    <string name="navigation_stats">Statistics</string>
    <string name="navigation_profile">Profile</string>
    <string name="add_goal">Goal</string>
    <string name="add_habit">Habit</string>
    <string name="create_user_title">Create User</string>
    <string name="create_user_message">We need some information to create your account..</string>
    <string name="create_user_hint_name">Name</string>
    <string name="create_user_hint_email">Email</string>
    <string name="create_user_hint_password">Password</string>
    <string name="create_user_hint_confirm_password">Confirm Password</string>
    <string name="create_user_create_button">Create Account</string>
    <string name="create_user_snackbar_error_email_already_in_use">Email .</string>
    <string name="create_user_snackbar_error_create_user">Error creating user.</string>
    <string name="create_user_empty_fields">You need to fill in all fields.</string>
    <string name="create_user_invalid_email">Enter a valid email address.</string>
    <string name="create_user_different_passwords">Passwords do not match.</string>
    <string name="create_user_min_characters">Password must be at least 6 characters.</string>
    <string name="forgot_password_title">I forgot the password</string>
    <string name="forgot_password_message">Enter the email you used to create your account. \n\nWe will send you instructions to reset your password.</string>
    <string name="forgot_password_hint_email">Email</string>
    <string name="forgot_password_send_button">Send email</string>
    <string name="forgot_password_message_email_not_registered">This email is not registered.</string>
    <string name="forgot_password_message_email">Enter an email.</string>
    <string name="forgot_password_message_invalid_email">Enter a valid email address.</string>
    <string name="forgot_password_snackbar_send_email_error">Error sending email.</string>
    <string name="forgot_password_snackbar_send_email_success">Email sent.</string>
    <string name="goal_title">Goal</string>
    <string name="goal_message_goal_done">Goal completed!</string>
    <string name="goal_message_goal_value_updated">Updated value.</string>
    <string name="goal_message_goal_value_invalid">Invalid value.</string>
    <string name="goal_message_empty_items">You have no items added for this goal yet.</string>
    <string name="goal_count">0</string>
    <string name="goal_final_date">00/00/00</string>
    <string name="goal_total_total_hint">0</string>
    <string name="goal_button_save">Save</string>
    <string name="goal_form_title">New Goal</string>
    <string name="goal_form_some_empty_value">Any empty value.</string>
    <string name="goal_form_empty_type_goal">Choose the type of goal.</string>
    <string name="goal_form_gold_silver_bronze_order"><![CDATA[Gold > Silver > Bronze]]></string>
    <string name="goal_form_empty_inc_dec">Inc/Dec empty.</string>
    <string name="goal_form_goal_name_hint">Title</string>
    <string name="goal_form_set_date">set date</string>
    <string name="goal_form_single_hint">Single</string>
    <string name="goal_form_bronze_hint">Bronze</string>
    <string name="goal_form_silver_hint">Silver</string>
    <string name="goal_form_gold_hint">Gold</string>
    <string name="goal_form_divide_and_conquest_title">Divide and Conquer</string>
    <string name="goal_form_type_title">Goal type</string>
    <string name="goal_form_radio_type_list">List</string>
    <string name="goal_form_radio_type_inc_dec">Counter</string>
    <string name="goal_form_radio_type_total">Final value</string>
    <string name="goal_form_goal_inc_dev">Set the values:</string>
    <string name="goal_form_goal_inc_value_hint">Increment</string>
    <string name="goal_form_goal_dec_value_hint">Decrement</string>
    <string name="habit_title">Habit</string>
    <string name="habit_next_ocurrence">Next occurrence:</string>
    <string name="habit_last_day_cycle">Last day of the cycle:</string>
    <string name="habit_value">0</string>
    <string name="habit_next_date">Next occurrence: April 13.</string>
    <string name="habit_last_date">Last day of the cycle: July 31st.</string>
    <string name="habit_item_swiped_deleted">Item removed.</string>
    <string name="habit_form_title">New Habit</string>
    <string name="habit_form_period_type_week">week</string>
    <string name="habit_form_period_type_month">month</string>
    <string name="habit_form_period_type_year">year</string>
    <string name="habit_form_period_type_custom">custom</string>
    <string name="habit_form_period_type_none">none</string>
    <string name="habit_form_name_hint">Title</string>
    <string name="habit_form_routine">Routine</string>
    <string name="habit_form_everyday">Everyday</string>
    <string name="habit_form_weekdays">A few days a week</string>
    <string name="habit_form_week_sunday">Sunday</string>
    <string name="habit_form_week_monday">Monday</string>
    <string name="habit_form_week_tuesday">Tuesday</string>
    <string name="habit_form_week_wednesday">Wednesday</string>
    <string name="habit_form_week_thursday">Thursday</string>
    <string name="habit_form_week_friday">Friday</string>
    <string name="habit_form_week_saturday">Saturday</string>
    <string name="habit_form_days">days by</string>
    <string name="habit_form_custom_days">Every</string>
    <string name="habit_form_custom_days_2">days</string>
    <string name="list_title">List</string>
    <string name="list_item_resolved_message">Archived goal.</string>
    <string name="list_placeholder_message">You have no goals in progress. \n\n Get started now!</string>
    <string name="login_title">Login</string>
    <string name="login_google_failed_message">Google sign in failed</string>
    <string name="login_wrong_password_message">Incorrect password.</string>
    <string name="login_user_not_registered_message">Unregistered User.</string>
    <string name="login_error_message">Error logging in..</string>
    <string name="login_email_password_message">Enter an email and password.</string>
    <string name="login_invalid_email_message">Enter a valid email address.</string>
    <string name="login_min_characters_message">Password must be at least 6 characters.</string>
    <string name="login_google_sign_in_message">Sign in with Google</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="login_sign_in_button">Login</string>
    <string name="login_forgot_password_button">I forgot my password</string>
    <string name="login_login_with_email_message">or login with your email</string>
    <string name="profile_title">Profile</string>
    <string name="profile_user_name">User Profile </string>
    <string name="profile_user_email">userprofile@gmail.com</string>
    <string name="profile_edit_profile_message">Edit profile</string>
    <string name="profile_logout_button_message">Log out</string>
    <string name="profile_logout_message">Are you sure you want to exit the app?</string>
    <string name="profile_logout_cancel_message">Cancel</string>
    <string name="profile_logout_ok_message">OK</string>
    <string name="profile_edit_title">Edit Profile</string>
    <string name="profile_edit_empty_fields">You need to fill in all fields.</string>
    <string name="profile_edit_invalid_email_message">Enter a valid email address.</string>
    <string name="profile_edit_different_passwords">Passwords do not match.</string>
    <string name="profile_edit_min_characters">Password must be at least 6 characters.</string>
    <string name="profile_edit_snackbar_error_email_already_in_use">E-mail already registered.</string>
    <string name="profile_edit_success">Profile edited.</string>
    <string name="profile_edit_error">Error updating user info.</string>
    <string name="profile_edit_need_login_again">For security reasons, you need to log out and log back in to the app before making this change.</string>
    <string name="profile_edit_name_hint">Name</string>
    <string name="profile_edit_email_hint">Email</string>
    <string name="profile_edit_password_hint">Password</string>
    <string name="profile_edit_confirm_password_hint">Confirm password</string>
    <string name="profile_edit_save_message">Save</string>
    <string name="settings_title">Settings</string>
    <string name="settings_language_title">Language</string>
    <string name="settings_language_message">Choose a language</string>
    <string name="settings_about_title">About</string>
    <string name="settings_about_rate_summary">Rate Mountains on Play Store</string>
    <string name="settings_about_rate_title">❤</string>
    <string name="settings_about_contact_title">Feedback</string>
    <string name="settings_about_contact_summary">Email us for question, suggestion or bug report</string>
    <string name="settings_about_version_title">Version</string>
    <string name="settings_about_version_summary">@string/versionName</string>
    <string name="settings_email_to">rafaelfelipeac@gmail.com</string>
    <string name="settings_email_title">Feedback - Mountains</string>
    <string name="settings_email_sender_title">Send email…</string>
    <string name="settings_pref_key_language_title">language category</string>
    <string name="settings_pref_key_language_message">language</string>
    <string name="settings_pref_key_about_title">about category</string>
    <string name="settings_pref_key_about_message">about</string>
    <string name="settings_pref_key_about_rate">rate</string>
    <string name="settings_pref_key_about_contact">contact</string>
    <string name="settings_pref_key_about_version">version</string>
    <string name="settings_language_language_title">Language</string>
    <string name="settings_language_radio_portuguese">Português</string>
    <string name="settings_language_radio_english">English</string>
    <string name="settings_language_key_portuguese">pt_br</string>
    <string name="settings_language_key_english">en</string>
    <string name="stats_title">Statistics</string>
    <string name="stats_message">You have already completed %d goals!</string>
    <string name="stats_placeholder_message">Create goals to track statistics and progress information.</string>
    <string name="stats_message_continue">Keep working on your goals! Your trophy room will never be full enough.</string>
    <string name="stats_single_value">%dx</string>
    <string name="stats_bronze_value">%dx</string>
    <string name="stats_silver_value">%dx</string>
    <string name="stats_gold_value">%dx</string>
    <string name="today_title">Today</string>
    <string name="today_next_ocurrence">Next occurrence:</string>
    <string name="today_day_message">NOV 9</string>
    <string name="today_value_message">3/10</string>
    <string name="today_late_title">LATE</string>
    <string name="today_today_title">TODAY</string>
    <string name="today_week_title">Next week</string>
    <string name="goal_done_message">There are pending items in this goal. Do you wish to complete?</string>
    <string name="goal_done_yes">YES</string>
    <string name="goal_done_no">NO</string>
</resources>