<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_background">

    <ImageView
            android:id="@+id/profile_logout_image"
            android:layout_width="75sp"
            android:layout_height="75dp"
            android:background="@mipmap/ic_app_logo"
            android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" />

    <TextView
            android:id="@+id/profile_logout_message"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:text="@string/profile_logout_message"
            android:textColor="@color/colorPrimary"
            android:textSize="18sp"
            android:textAlignment="center"
            app:layout_constraintTop_toBottomOf="@+id/profile_logout_image"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"/>

    <android.widget.Button
            android:id="@+id/profile_logout_cancel_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:text="@string/profile_logout_cancel_message"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDarkOne"
            android:background="@drawable/rounded_button"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="32dp"
            app:layout_constraintEnd_toStartOf="@+id/profile_logout_view"
            android:layout_marginEnd="8dp"
            app:layout_constraintTop_toBottomOf="@+id/profile_logout_message"
            android:layout_marginTop="24dp"
            app:layout_constraintHorizontal_bias="0.8"/>

    <View
            android:id="@+id/profile_logout_view"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.90999997"/>

    <android.widget.Button
            android:id="@+id/profile_logout_ok_button"
            android:layout_width="100dp"
            android:layout_height="50dp"
            android:textAllCaps="false"
            android:text="@string/profile_logout_ok_message"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDarkOne"
            android:background="@drawable/rounded_button"
            android:layout_marginBottom="32dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="32dp"
            app:layout_constraintStart_toStartOf="@+id/profile_logout_view"
            android:layout_marginStart="8dp"
            app:layout_constraintHorizontal_bias="0.2"/>

</androidx.constraintlayout.widget.ConstraintLayout>
