<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimaryDarkOne"
        tools:context=".future.stats.StatsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/rounded_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:context=".future.stats.StatsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/stats_default"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:id="@+id/stats_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="16dp"
                    android:text="@string/stats_message"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="22sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                    android:id="@+id/stats_single_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@mipmap/ic_medal"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stats_message" />

            <TextView
                    android:id="@+id/stats_single_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:text="@string/stats_single_value"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stats_single_image" />

            <ImageView
                    android:id="@+id/stats_bronze_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@mipmap/ic_bronze"
                    app:layout_constraintEnd_toStartOf="@+id/stats_silver_image"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/stats_silver_image" />

            <TextView
                    android:id="@+id/stats_bronze_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/stats_bronze_value"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/stats_bronze_image"
                    app:layout_constraintStart_toStartOf="@+id/stats_bronze_image"
                    app:layout_constraintTop_toBottomOf="@+id/stats_bronze_image" />

            <ImageView
                    android:id="@+id/stats_silver_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="8dp"
                    android:background="@mipmap/ic_silver"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stats_single_value" />

            <TextView
                    android:id="@+id/stats_silver_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/stats_silver_value"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/stats_silver_image"
                    app:layout_constraintStart_toStartOf="@+id/stats_silver_image"
                    app:layout_constraintTop_toBottomOf="@+id/stats_silver_image" />

            <ImageView
                    android:id="@+id/stats_gold_image"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginEnd="8dp"
                    android:background="@mipmap/ic_gold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/stats_silver_image"
                    app:layout_constraintTop_toTopOf="@+id/stats_silver_image" />

            <TextView
                    android:id="@+id/stats_gold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:text="@string/stats_gold_value"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="@+id/stats_gold_image"
                    app:layout_constraintStart_toStartOf="@+id/stats_gold_image"
                    app:layout_constraintTop_toBottomOf="@+id/stats_gold_image" />

            <TextView
                    android:id="@+id/stats_message_footer"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="32dp"
                    android:layout_marginEnd="32dp"
                    android:layout_marginBottom="32dp"
                    android:text="@string/stats_message_continue"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stats_silver_value"
                    app:layout_constraintVertical_bias="0.0" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/stats_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:visibility="gone">

            <ImageView
                    android:id="@+id/stats_placeholder_image"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@mipmap/ic_app_logo"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.35" />

            <TextView
                    android:id="@+id/stats_placeholder_message"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="32dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="32dp"
                    android:text="@string/stats_placeholder_message"
                    android:textAlignment="center"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/stats_placeholder_image" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
