<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_primary_dark_two"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

    <View
            android:id="@+id/goal_done_indicator"
            android:layout_width="@dimen/indicator_width"
            android:layout_height="@dimen/indicator_height"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_regular"
            android:layout_marginEnd="@dimen/margin_small"
            android:background="@drawable/rounded_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    <TextView
            android:id="@+id/goal_done_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_xlarger"
            android:layout_marginTop="@dimen/margin_large"
            android:layout_marginEnd="@dimen/margin_xlarger"
            android:gravity="center_horizontal"
            android:text="@string/goal_done_message"
            android:textColor="@color/colorPrimary"
            android:textSize="@dimen/text_size_large"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goal_done_indicator" />

    <android.widget.Button
            android:id="@+id/goal_done_yes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_larger"
            android:layout_marginEnd="@dimen/margin_regular"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="@drawable/rounded_button"
            android:text="@string/goal_done_yes"
            android:textColor="@color/colorPrimaryDarkOne"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/goal_done_view"
            app:layout_constraintTop_toBottomOf="@+id/goal_done_message"
            app:layout_constraintVertical_bias="0.0" />

    <View
            android:id="@+id/goal_done_view"
            android:layout_width="@dimen/view_size"
            android:layout_height="@dimen/view_size"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_regular"
            android:layout_marginEnd="@dimen/margin_small"
            android:layout_marginBottom="@dimen/margin_small"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/goal_done_message" />

    <android.widget.Button
            android:id="@+id/goal_done_no"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_regular"
            android:layout_marginTop="@dimen/margin_larger"
            android:layout_marginBottom="@dimen/margin_large"
            android:background="@drawable/rounded_button"
            android:text="@string/goal_done_no"
            android:textColor="@color/colorPrimaryDarkOne"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/goal_done_view"
            app:layout_constraintTop_toBottomOf="@+id/goal_done_message"
            app:layout_constraintVertical_bias="0.0" />

</androidx.constraintlayout.widget.ConstraintLayout>
